fix: Table headers do not wrap to next line.

--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -15,6 +15,7 @@ table {
       color: var(--dark-gray-color);
       font-size: 0.9rem;
       font-weight: 500;
+      white-space: nowrap;
       cursor: pointer;
       padding: 4px 10px;
     }
